2018-06-11 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/literalop.c:
	  Improved for aarch64.

2018-06-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCbitv.c,
	* src/SDCCbitv.h: simplify to only access bit vector as unsigned
	  int, add functions for in-place intersection and union operations
	* src/SDCCset.c,
	* src/SDCCset.h: new function destructItemIf calls a destructor
	  function before deleting a set item
	* src/SDCCBBlock.c,
	* src/SDCCBBlock.h,
	* src/SDCCopt.c: free some eBBlock data when switching to iCode chain
	* src/SDCCcflow.c: free code flow data when not needed
	* src/SDCCdflow.c,
	* src/SDCCcse.c,
	* src/SDCCcse.h: free data flow and CSE data when not needed

2018-06-08 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/bitwise.c:
	  Improved for aarch64.

2018-06-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c,
	  src/SDCCopt.c:
	  Narrow reads from pointers, RFE #559.
	* doc/sdccman.lyx:
	  Improve documentation for --stack-loc.

2018-06-06 Ben Shi <powerstudio1st AT 163 DOT com>

	* sim/ucsim/config.guess:
	  updated to the newest version. (timestamp='2018-05-19')

2018-06-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/z80/peeph-z80.def: fixed peephole rule 153 (possibly fix for
	  bug #2754)

2018-06-04 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asz80/z80.h,
	  sdas/asz80/z80adr.c,
	  sdas/asz80/z80mch.c,
	  sdas/asz80/z80pst.c:
	  Assembler support for ZX Spectrum Next opcodes: Patch by pauloscustodio.

2018-06-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (expandInlineFuncs): fix bug #2752
	* support/regression/tests/bug-2752.c: enable test

2018-06-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: mingw-w64 needs libwinpthread-1.dll
	* support/scripts/sdcc.nsi: add stm8-large library to setup.exe package

2018-05-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y,
	  src/SDCCerr.c: