@@ -1,3 +1,9 @@
+2018-06-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCbitv.c: fix bug #2759
+	* src/SDCCglue.c: fix bug #2749
+	* support/regression/tests/bug-2749: enable test
+
 2018-06-11 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* support/regression/tests/literalop.c:
